refactor: cleaning a bit and making the message in the written callback the literal same object and not just an equal one.